# VostKrep

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf    pyproject.toml
.github/workflows/: ci.yml
backend/: .coverage  .coveragerc  .flake8  entrypoint.sh  env_template  manage.py  pyproject.toml  pytest.ini  test_products.xlsx
backend/VostKrep/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/api/: views.py
backend/apps/order/: models.py  serializers.py  urls.py  views.py
backend/apps/order/migrations/: 0001_initial.py  0002_remove_orderitem_price.py  0003_order_tg_chat_id_orderitem_tg_chat_id.py
backend/apps/pages/: admin.py  models.py  serializers.py  services.py  url.py  urls.py  views.py
backend/apps/products/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/data/: vostkrepbd.xlsx  vostkrepbd1.xlsx
backend/order/: admin.py  models.py  serializers.py  services.py  views.py
backend/src/project/: celery.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  Dockerfile  Dockerfile_frontend  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(home)/: layout.tsx  page.tsx
frontend/src/app/about/: layout.tsx  page.tsx
frontend/src/app/catalog/: layout.tsx
frontend/src/app/delivery/: layout.tsx  page.tsx
frontend/src/app/payment/: layout.tsx  page.tsx
frontend/src/app/personal_data/: layout.tsx  page.tsx
frontend/src/app/privacy/: layout.tsx  page.tsx
frontend/src/app/product/: layout.tsx
frontend/src/components/: AnimatedTitle.tsx  Categories.tsx  Footer.tsx  Header.tsx  HomePage.tsx  PageTransition.tsx  Welcome.tsx  categories.tsx
frontend/src/components/categories/: CategoriesSection.tsx  CategoriesSectionClient.tsx  CategoriesSectionSSR.ts  CategoryCard.tsx
frontend/src/components/delivery/: Delivery.tsx  Map.tsx  YandexMap.tsx  delivery.module.css
frontend/src/components/icons/: BackButton.tsx  NutIcon.tsx  OpenModalButton.tsx  ScrollToTopButton.tsx
frontend/src/components/layout/: FooterDark.tsx  FooterLight.tsx  Header.tsx  HeaderLight.tsx
frontend/src/components/order/: CartForm.tsx  OrderForm.tsx
frontend/src/context/: CartContext.tsx  FormContext.tsx
frontend/src/data/: categories.ts  products.ts
frontend/src/lib/: api.ts  csrf.ts
frontend/src/styles/: about.module.css  cart.module.css  categories_section.module.css  category_card.module.css  delivery.module.css  footer_dark.module.css  footer_light.module.css  header.module.css  header_light.module.css  home_page.module.css  order.module.css  payment.module.css  personal_data.module.css  privacy.module.css  product_card.module.css  product_detail.module.css  products_section.module.css  scroll_to_top.module.css
frontend/src/types/: category.ts  delivery.ts  index.ts  product.ts  static_pages.ts
nginx_conf/: nginx.conf  
nginx_conf/conf.d/: default.conf
(+64 files in other folders)
